<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/icHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"
        />
    <item
        android:id="@+id/icCart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="Cart"
        />
    <item
        android:id="@+id/icWish"
        android:icon="@drawable/ic_heart"
        android:title="Wishlist"
        />
    <item
        android:id="@+id/icAccount"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Account"
        />



</menu>