...
                android:layout_marginTop="32dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvProfileUserName"
                    android:text="Username"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

...
